frontend/frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: pdressel/devcon:frontend
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
