frontend/frontend-deployment2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: pdressel/devcon:frontend2
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 250Mi
