frontend/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: frontend
