frontend/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: frontend.workshop
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
